# fast-agent

./: pyproject.toml
disttribuible/: INSTALACION.md  fast_agent_mcp-0.2.24-py3-none-any.whl
examples/azure-openai/: fastagent.config.yaml
src/mcp_agent/agents/: agent.py  base_agent.py
src/mcp_agent/agents/workflow/: chain_agent.py  evaluator_optimizer.py  orchestrator_agent.py  parallel_agent.py  router_agent.py
src/mcp_agent/cli/commands/: check_config.py
src/mcp_agent/llm/: model_factory.py
src/mcp_agent/llm/providers/: augmented_llm_azure.py  augmented_llm_openai.py
src/mcp_agent/mcp_server/: agent_server.py
src/mcp_agent/server/: response_aggregator.py
tests/e2e/sampling/: fastagent.jsonl
tests/unit/mcp_agent/cli/commands/: test_check_config.py
tests/unit/mcp_agent/llm/: test_agent_llm_integration.py
tests/unit/mcp_agent/llm/providers/: test_augmented_llm_azure.py
tests/unit/mcp_agent/server/: test_response_aggregator.py
