[project]
name = "fast-agent-mcp"
version = "0.2.24"
description = "Define, Prompt and Test MCP enabled Agents and Workflows"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Shaun Smith", email = "fastagent@llmindset.co.uk"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "mcp>=1.8.0",
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "anthropic>=0.49.0",
    "openai>=1.63.2",
    "azure-identity>=1.14.0",
    "prompt-toolkit>=3.0.50",
    "aiohttp>=3.11.13",
    "a2a-types>=0.1.0",
    "opentelemetry-instrumentation-openai>=0.39.3; python_version >= '3.10' and python_version < '4.0'",
    "opentelemetry-instrumentation-anthropic>=0.39.3; python_version >= '3.10' and python_version < '4.0'",
    "tensorzero>=2025.4.7",
    "opentelemetry-instrumentation-mcp>=0.40.3; python_version >= '3.10' and python_version < '4.0'",
]
[project.optional-dependencies]
openai = [
    "openai>=1.58.1",
]
azure = [
    "azure-identity>=1.14.0"
]
dev = [
    "anthropic>=0.42.0",
    "pre-commit>=4.0.1",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
    "ruff>=0.8.4",
    "tomli>=2.2.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov",
]
[project.scripts]
fast-agent = "mcp_agent.cli.__main__:app"
fastagent = "mcp_agent.cli.__main__:app"
silsila = "mcp_agent.cli.__main__:app"
prompt-server = "mcp_agent.mcp.prompts.__main__:main"

# Añadir esta sección para Poetry
[tool.poetry]
name = "fast-agent-mcp"
version = "0.2.24"
description = "Define, Prompt and Test MCP enabled Agents and Workflows"
readme = "README.md"
authors = ["Shaun Smith <fastagent@llmindset.co.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.115.6"
mcp = ">=1.8.0"
opentelemetry-distro = ">=0.50b0"
opentelemetry-exporter-otlp-proto-http = ">=1.29.0"
pydantic-settings = ">=2.7.0"
pydantic = ">=2.10.4"
pyyaml = ">=6.0.2"
rich = ">=13.9.4"
typer = ">=0.15.1"
anthropic = ">=0.49.0"
openai = ">=1.63.2"
azure-identity = ">=1.14.0"
prompt-toolkit = ">=3.0.50"
aiohttp = ">=3.11.13"
a2a-types = ">=0.1.0"
tensorzero = ">=2025.4.7"
opentelemetry-instrumentation-openai = {version = ">=0.39.3", python = ">=3.10,<4.0"}
opentelemetry-instrumentation-anthropic = {version = ">=0.39.3", python = ">=3.10,<4.0"}
opentelemetry-instrumentation-mcp = {version = ">=0.40.3", python = ">=3.10,<4.0"}

[tool.poetry.scripts]
fast-agent = "mcp_agent.cli.__main__:app"
fastagent = "mcp_agent.cli.__main__:app"
silsila = "mcp_agent.cli.__main__:app"
prompt-server = "mcp_agent.mcp.prompts.__main__:main"

# Sistema de construcción (mantener ambos para compatibilidad)
[build-system]
requires = ["poetry-core>=1.0.0", "hatchling"]
build-backend = "poetry.core.masonry.api"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_agent"]

[tool.hatch.build]
include = [
    "src/mcp_agent/**/*.py",
    "src/mcp_agent/**/*.yaml",
    "src/mcp_agent/**/*.yml",
    "src/mcp_agent/**/*.csv",
    "src/mcp_agent/**/*.txt",    
    "src/mcp_agent/**/*.example",    
    "examples/**/*.py",
    "examples/**/*.yaml",
    "examples/**/*.yml",
    "examples/**/*.txt",
    "examples/**/*.csv",
    "examples/**/*.md",
    "examples/**/*.css",
    "examples/**/mount-point/*.csv",
    "examples/workflows/short_story.txt",
    "examples/mcp/**/*.py",
    "examples/mcp/**/*.yaml",
    "examples/mcp/**/*.example",
]

[tool.poetry.packages]
[[tool.poetry.packages]]
include = "mcp_agent"
from = "src"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: tests that connect to external resources (llms)",
    "integration: marks tests as integration tests",
    "simulated_endpoints: marks tests that use simulated external endpoints"
]
testpaths = ["test", "integration_tests"]

[dependency-groups]
dev = [
    "anthropic>=0.49.0",
    "pre-commit>=4.0.1",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
    "ruff>=0.8.4",
    "tomli>=2.2.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=6.1.1",
    "ipdb>=0.13.13",
]

[tool.setuptools.package-data]
mcp_agent = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "TCH"  # type checking
]
ignore=["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # Don't require type annotations in tests
